--- a/init.p3.rc
+++ b/init.p3.rc
@@ -4,10 +4,12 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
     write /sys/class/firmware/timeout 5
 
-    export EXTERNAL_STORAGE /mnt/sdcard
-    mkdir /mnt/sdcard 0000 system system
+    export EXTERNAL_STORAGE /storage/sdcard0
+    mkdir /storage 0050 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
     # for backwards compatibility
-    symlink /mnt/sdcard /sdcard
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
 
     # create directory for mounting usb drives
     mkdir /mnt/usbdrive 0664 system system
@@ -27,17 +29,14 @@ on init
     mkdir /dev/pipes 0771 shell shell        
 
 on fs
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p4 /system wait ro
-    setprop ro.crypto.tmpfs_options size=128m,mode=0771,uid=1000,gid=1000
-    exec check_filesystem /dev/block/platform/sdhci-tegra.3/by-num/p5 ext4
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p5 /cache wait noatime nosuid nodev journal_async_commit
-    exec check_filesystem /dev/block/platform/sdhci-tegra.3/by-num/p8 ext4
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p8 /data wait noatime nosuid nodev noauto_da_alloc,journal_async_commit
-
-    # mound EFS partition
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p1 /efs wait noatime nosuid nodev
+    mount_all /fstab.p3
+    setprop ro.crypto.fuse_sdcard true
 
 on post-fs-data
+    # we will remap this as /storage/sdcard0 with the sdcard fuse tool
+    mkdir /data/media 0770 media_rw media_rw
+    chown media_rw media_rw /data/media
+
     chown radio system /efs
     chmod 0771 /efs
     chmod 0775 /efs/bluetooth
@@ -89,10 +88,6 @@ on post-fs-data
     mkdir /data/log 0777 root root 
     chmod 0777 /data/log
     
-    # we will remap this as /mnt/sdcard with the sdcard fuse tool
-    mkdir /data/media 0775 media_rw media_rw
-    chown media_rw media_rw /data/media
-
     # Set indication (checked by vold) that we have finished this action
     setprop vold.post_fs_data_done 1
 
@@ -186,6 +181,23 @@ on boot
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
 
+# Set perms for interactive
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_rate
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/timer_rate
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/min_sample_time
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boost
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/boost
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/boostpulse
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/input_boost
+    chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/input_boost
+
 # Enable KSM
     write /sys/kernel/mm/ksm/sleep_millisecs 1400
     write /sys/kernel/mm/ksm/pages_to_scan 200
@@ -234,8 +246,8 @@ on boot
     chmod 0664 /sys/devices/virtual/misc/level/control	
 # Camera
     chown system radio /sys/class/sec/sec_s5k5ccgx/cameraflash
-    chown system radio /sys/class/sec/sec_s5k5ccgx/camtype
-    chown system radio /sys/class/sec/sec_s5k5bbgx/camtype
+	chown system radio /sys/class/sec/sec_s5k5ccgx/camtype
+	chown system radio /sys/class/sec/sec_s5k5bbgx/camtype
 
 # Change permissions on cameraflash so that we can use it with Torch
     chmod 0666 /sys/devices/virtual/sec/sec_s5k5ccgx/cameraflash
@@ -264,6 +276,21 @@ service drm /system/bin/drmserver
     user drm
     group system root inet sdcard_rw
 
+# create virtual SD card at /storage/sdcard0, based on the /data/media directory
+# daemon will drop to user/group system/media_rw after initializing
+# underlying files in /data/media wil be created with user and group media_rw (1023)
+service sdcard /system/bin/sdcard /data/media 1023 1023
+    class late_start
+
+service p2p_supplicant /system/bin/wpa_supplicant \
+        -ieth0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+        -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
+	-e/data/misc/wifi/entropy.bin
+    class main
+    socket wpa_eth0 dgram 660 wifi wifi
+    disabled
+    oneshot
+
 service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 \
         -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
     class main
@@ -271,7 +298,7 @@ service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 \
     disabled
     oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+service dhcpcd_eth0 /system/bin/dhcpcd -aABKL
     class main
     disabled
     oneshot
@@ -307,12 +334,6 @@ service gpsd /system/bin/gpsd -c /system/etc/gps.xml
     user gps
     group system inet
     
-# create virtual SD card at /mnt/sdcard, based on the /data/media directory
-# daemon will drop to user/group system/media_rw after initializing
-# underlying files in /data/media wil be created with user and group media_rw (1023)
-service sdcard /system/bin/sdcard /data/media 1023 1023
-    class late_start
-
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --no2bytes \
     --use_baudrate_for_download --baudrate 3000000 --patchram /etc/firmware/bcm4330B1.hcd /dev/ttyHS2
     class main
