--- a/init.p3.rc
+++ b/init.p3.rc
@@ -6,16 +6,19 @@ on early-init
     export EXTERNAL_STORAGE /storage/sdcard0
     mkdir /storage 0050 system sdcard_r
     mkdir /storage/sdcard0 0000 system system
+    mkdir /storage/usbdisk0 0775 system system
+    mkdir /efs 0771 radio system
+    mkdir /preload 0771 system system
+    mkdir /mnt 0775 root system
+    mkdir /mnt/.lfs 0755 root root
+
     # for backwards compatibility
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/usbdisk0 /usbdisk0
+    symlink /storage/usbdisk0 /mnt/usbdisk0
 
-    # create directory for mounting usb drives
-    mkdir /mnt/usbdrive 0664 system system
-    symlink /mnt/usbdrive /usbdrive
-
-    mkdir /efs 0771 system system
-    
+    # Disable CFQ slice idle delay    
     write /sys/block/mmcblk0/queue/iosched/slice_idle 0
 
 on init
@@ -24,23 +27,20 @@ on init
     mkdir /dev/pipes 0771 shell shell   
 
 on fs
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p4 /system wait ro
-	setprop ro.crypto.tmpfs_options size=128m,mode=0771,uid=1000,gid=1000
-	exec sfsck /dev/block/platform/sdhci-tegra.3/by-num/p5 ext4
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p5 /cache wait noatime nosuid nodev
-    # Device Encryption by Security R&D Group.
-    exec set_crypt_meta_info /dev/block/platform/sdhci-tegra.3/by-num/p8 /data    
-    exec sfsck /dev/block/platform/sdhci-tegra.3/by-num/p8 ext4 encryptable
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p8 /data wait noatime nosuid nodev noauto_da_alloc
-	exec sfsck /dev/block/platform/sdhci-tegra.3/by-num/p1 ext4
-	mount ext4 /dev/block/platform/sdhci-tegra.3/by-num/p1 /efs wait noatime nosuid nodev
+    mount_all /fstab.p3
+    setprop ro.crypto.fuse_sdcard true
 
 on post-fs-data
-    chown system radio /efs
+    # we will remap this as /storage/sdcard0 with the sdcard fuse tool
+    mkdir /data/media 0770 media_rw media_rw
+    chown media_rw media_rw /data/media
+
+    chown radio system /efs
     chmod 0775 /efs
     mkdir /efs/wifi
     mkdir /efs/bluetooth
     chown radio system /efs/wifi
+    chown radio system /efs/bluetooth
     chmod 0775 /efs/bluetooth
     chmod 0775 /efs/wifi
 
@@ -84,7 +84,7 @@ on post-fs-data
 # SEC_MM_DRM
   # Found in P4
 
-    # DRM directory creation
+# DRM directory creation
     mkdir /system/etc/security/.drm 0775
     chown root root /system/etc/security/.drm
     chmod 0775 /system/etc/security/.drm
@@ -123,7 +123,6 @@ on post-fs-data
 # HATP Result Dir
     mkdir /data/misc/radio 0771 radio system
 
-# we will remap this as /mnt/sdcard with the sdcard fuse tool
 # Set indication (checked by vold) that we have finished this action
     setprop vold.post_fs_data_done 1
 
@@ -280,26 +279,30 @@ on boot
 # Always start adbd on userdebug and eng builds
     setprop sys.usb.config adb
 
-service wpa_supplicant /system/bin/wpa_supplicant \
-    -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
-#   we will start as root and wpa_supplicant will switch to user wifi
-#   after setting up the capabilities required for WEXT
-#   user wifi
-#   group wifi inet keystore
+# create virtual SD card at /storage/sdcard0, based on the /data/media directory
 # daemon will drop to user/group system/media_rw after initializing
-# underlying files in /data/media wil be created with user and group media_rw (1023)
+# underlying files in /data/media will be created with user and group media_rw (1023)
 service sdcard /system/bin/sdcard /data/media 1023 1023
     class late_start
 
-service p2p_supplicant /system/bin/wpa_supplicant \
-        -ieth0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
-        -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
-	-e/data/misc/wifi/entropy.bin
+service wpa_supplicant /system/bin/wpa_supplicant \
+    -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
+    #   we will start as root and wpa_supplicant will switch to user wifi
+    #   after setting up the capabilities required for WEXT
+    #   user wifi
+    #   group wifi inet keystore
     class main
-    socket wpa_eth0 dgram 660 wifi wifi
+    socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
+    
 
+service p2p_supplicant /system/bin/wpa_supplicant \
+    -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
+    # we will start as root and wpa_supplicant will switch to user wifi
+    # after setting up the capabilities required for WEXT
+    # user wifi
+    # group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
@@ -315,30 +318,14 @@ service dhcpcd_p2p /system/bin/dhcpcd -aABKL
     disabled
     oneshot
 
-service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
-    class main
-    disabled
-    oneshot
-
-service dhcpcd_eth0 /system/bin/dhcpcd -ABKL -f/system/etc/dhcpcd/dhcpcd.conf
-    class main
-    disabled
-    oneshot
-
 service iprenew_wlan0 /system/bin/dhcpcd -n
+    class main
     disabled
     oneshot
 
 service iprenew_p2p /system/bin/dhcpcd -n
-    disabled
-    oneshot
-
-service iprenew_eth0 /system/bin/dhcpcd -n
-    disabled
-    oneshot
-
-service macloader /system/bin/macloader
     class main
+    disabled
     oneshot
 
 # end of wifi
